--- a/core/src/main/resources/application.yaml
+++ b/core/src/main/resources/application.yaml
@@ -9,10 +9,13 @@ spring:
     driver-class-name: org.postgresql.Driver
     hikari:
       maximum-pool-size: 10
-  sql:
-    init:
-      mode: always
-      data-locations: classpath:init/schema.sql
+  #sql:
+  #  init:
+  #    mode: always
+  #    data-locations: classpath:init/schema.sql
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: update
+
+mybatis:
+  mapper-locations: classpath*:mappings/*.xml
