--- a/core-api/pom.xml
+++ b/core-api/pom.xml
@@ -16,8 +16,18 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>2.2.2</version>
+        </dependency>
+
+        <dependency>
             <groupId>liga.medical</groupId>
             <artifactId>person-service-dto</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>liga.medical</groupId>
+            <artifactId>person-service-core</artifactId>
         </dependency>
     </dependencies>
 </project>
