--- a/core-api/pom.xml
+++ b/core-api/pom.xml
@@ -20,14 +20,14 @@
             <artifactId>mybatis-spring-boot-starter</artifactId>
             <version>2.2.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>liga.medical</groupId>
             <artifactId>person-service-dto</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>liga.medical</groupId>
-            <artifactId>person-service-core</artifactId>
         </dependency>
     </dependencies>
 </project>
