--- a/core/src/main/resources/application.yaml
+++ b/core/src/main/resources/application.yaml
@@ -15,7 +15,7 @@ spring:
   #    data-locations: classpath:init/schema.sql
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
 
 mybatis:
   mapper-locations: classpath*:mappings/*.xml
