--- a/dependency-management-bom/pom.xml
+++ b/dependency-management-bom/pom.xml
@@ -16,6 +16,7 @@
     <properties>
         <!--        Проектные настройки\версии-->
         <mybatis.version>3.5.5</mybatis.version>
+        <mybatis-spring-boot-starter.version>2.2.2</mybatis-spring-boot-starter.version>
     </properties>
 
     <dependencyManagement>
@@ -76,6 +77,11 @@
                 <groupId>org.mybatis</groupId>
                 <artifactId>mybatis</artifactId>
                 <version>${mybatis.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.mybatis.spring.boot</groupId>
+                <artifactId>mybatis-spring-boot-starter</artifactId>
+                <version>${mybatis-spring-boot-starter.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.google.guava</groupId>
