--- a/core/src/main/resources/application.yaml
+++ b/core/src/main/resources/application.yaml
@@ -9,13 +9,9 @@ spring:
     driver-class-name: org.postgresql.Driver
     hikari:
       maximum-pool-size: 10
-  #sql:
-  #  init:
-  #    mode: always
-  #    data-locations: classpath:init/schema.sql
-  jpa:
-    hibernate:
-      ddl-auto: create
+  liquibase:
+    change-log: classpath:/db/changelog.xml
+    enabled: true
 
 mybatis:
   mapper-locations: classpath*:mappings/*.xml
