--- a/dependency-management-bom/pom.xml
+++ b/dependency-management-bom/pom.xml
@@ -17,6 +17,7 @@
         <!--        Проектные настройки\версии-->
         <mybatis.version>3.5.5</mybatis.version>
         <mybatis-spring-boot-starter.version>2.2.2</mybatis-spring-boot-starter.version>
+        <liquibase-core.version>4.10.0</liquibase-core.version>
     </properties>
 
     <dependencyManagement>
@@ -72,7 +73,6 @@
                 <version>${project.version}</version>
             </dependency>
 
-
             <dependency>
                 <groupId>org.mybatis</groupId>
                 <artifactId>mybatis</artifactId>
@@ -82,6 +82,11 @@
                 <groupId>org.mybatis.spring.boot</groupId>
                 <artifactId>mybatis-spring-boot-starter</artifactId>
                 <version>${mybatis-spring-boot-starter.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.liquibase</groupId>
+                <artifactId>liquibase-core</artifactId>
+                <version>${liquibase-core.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.google.guava</groupId>
