add spring security also registration frontend

--- a/core/src/main/resources/application.yaml
+++ b/core/src/main/resources/application.yaml
@@ -12,6 +12,9 @@ spring:
   liquibase:
     change-log: classpath:/db/changelog.xml
     enabled: true
+  mustache:
+    servlet:
+      expose-request-attributes: true
 
 mybatis:
   mapper-locations: classpath*:mappings/*.xml
