--- a/core/pom.xml
+++ b/core/pom.xml
@@ -64,6 +64,11 @@
         </dependency>
 
         <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-boot-starter</artifactId>
+        </dependency>
+
+        <dependency>
             <!--        Эта зависимость тянет компоненты спринга их тоже нужно сканировать-->
             <groupId>liga.medical</groupId>
             <artifactId>common-services</artifactId>
@@ -80,11 +85,10 @@
             <groupId>liga.medical</groupId>
             <artifactId>person-service-dto</artifactId>
         </dependency>
-
     </dependencies>
 
     <build>
-<!--        <finalName>analyzer-service</finalName>-->
+<!--        <finalName>person-service</finalName>-->
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
