--- a/core/src/main/resources/application.yml
+++ b/core/src/main/resources/application.yml
@@ -13,6 +13,10 @@ spring:
     change-log: classpath:/db/changelog.xml
     enabled: true
     default-schema: clinic
+  sql:
+    init:
+      data-locations: classpath:db/data.sql
+      mode: always
   mustache:
     servlet:
       expose-request-attributes: true
